Request-Limit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-webserver-rl
spec:
  containers:
  - image: nginx
    name: demo
    resources:
      requests:
        memory: "64Mi"
        cpu: "0"
      limits:
        memory: "128Mi"
        cpu: "0.5"
