toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-webserver
spec:
  containers:
  - image: nginx
    name: demo-container
  tolerations:
  - key: "key"
    operator: "Exists"
    effect: "NoSchedule"
